--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- stylesheet  -->
+    <link rel="stylesheet" href="style.css">
+    <!-- tailwindcss link  -->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
     <header>
         <nav>
-            <ul class="flex bg-purple-800 text-xl py-8 space-x-4">
+            <ul class="flex bg-gradient-to-r from-indigo-100 via-purple-400 to-pink-300  text-xl py-8 space-x-4">
                 <li><a href="/" class="hover:bg-lime-200 bg-slate-400 rounded-lg p-1">Home</a></li>
                 <li><a href="/" class="hover:bg-lime-200 bg-slate-400 rounded-lg p-1">About</a></li>
                 <li><a href="#" class="hover:bg-lime-200 bg-slate-400 rounded-lg p-1">Contac</a></li>
@@ -20,14 +23,18 @@
             </ul>
         </nav>
     </header>
+    <!-- 😂😊😎 ======= Home section start =============😎😎😎😎 -->
     <section>
-        <div class="bg-yellow-500 w-3/4 mx-auto flex flex-col mt-10 justify-center py-24 rounded-xl">
-            <p class="text-5xl p-3 m-1 w-3/4 mx-auto rounded-2xl">Welcome to <span class="text-red-100">Bapp er
-                    Bank</span></p>
+        <div
+            class="bg-gradient-to-r from-cyan-900 to-blue-500  w-3/4 mx-auto flex flex-col mt-10 justify-center py-24 rounded-xl">
+            <h1 class="text-5xl p-3 m-1 w-3/4 mx-auto rounded-2xl">Welcome to <span class="text-yellow-500">Bapp er
+                    Bank</span></h1>
             <input type="text" class="text-2xl p-3 m-1 w-3/4 mx-auto rounded-2xl" placeholder="Enter your name">
             <input type="email" class="text-2xl p-3 m-1 w-3/4 mx-auto rounded-2xl" placeholder="Enter your Email">
             <input type="password" class="text-2xl p-3 m-1 w-3/4 mx-auto rounded-2xl" placeholder="Enter your Password">
-            <button class="rounded-full bg-slate-600 w-7/12">Save Changes</button>
+            <button
+                class="rounded-full bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500 w-2/4 mx-auto text-xl text-black-900 p-1 mt-4">Submit</button>
+
         </div>
     </section>
     <script src="js/index.js"></script>
